# neural_networks

./: .gitignore  .gitmodules  README.md  best_model.h5.REMOVED.git-id  check_frames.py  data.py  data_bbox.py  data_root  evaluate_loss.py  execute.py  keep_working.sh  make_archive.sh  ncs_notes.md  net.py  rects.py  reqs.txt  reqs_cpu.txt  reqs_ncs.txt  special_reqs.txt  train.py  train_bbox.py  vars.sh
Caffe_experiments/caffe_traffic_signs/: create_lmdb.py  create_proto.py  execute_net.py  show_loss.sh  solve.py
Caffe_experiments/caffe_tsigns_regression/: prepare_lmdb.sh  restore_caffe.sh  solve.py  start_caffe.sh
GTSDB/: data  parser_gtsdb.py
GTSDB/YOLO/: .gitignore  TestAugmentation.ipynb  VOCdevkit  common.py  config-coco-original.json  download_FE_weights.sh  export_2_pb.py  gen_anchors.py  labels.json  measure_fps.py  mobile2_config.json  mobile_2_uff.sh  pb_viewer.py  pip_packages.txt  predict.py  start_train.sh  sync_files.sh  tensorrt_inf.py  test_weights.sh  tiny_2_uff.sh  tiny_config.json  train.py  upload_files.sh
GTSRB/: data  data.py
GTSRB/MobileNetV2/: readTrafficSigns.py  train.py
GTSRB/MobileNetV2_keras/: data.py  model.py  train_old.py  upload_files.sh
MobileNetV2/: callbacks.py  config.json  generator.py  train.py
RLS/NNs/: callbacks.py  config.py  convert_2_graph.py  data.py  model_2_graph.py  mvnc_check.sh  mvnc_infer.py  mvnc_test.py  ncs.py  ncs_infer.py  ncs_model_2_graph.py  ncs_ros_play_rosbag.py  net.py  requirements.txt  requirements_3_ncs.txt  sync_common.sh  sync_files.sh  sync_files_jtsn.sh  train.py  trt_infer.py  trt_model_2_uff.py  utils.py
TSD/: GTSDB  RTSD  backup_on_uniq.sh  check_annotation.py  copy_with_annotations.py  get_gtsdb.sh  parser_gtsdb.py  parser_gtsdb_2_voc.py  parser_robofest_2_voc.py  parser_rtsd.py  parser_rtsd_2_voc.py  reqs.txt  start_tensorboard.sh  sync_rf_with_uniq.sh  voc_generator.py
TSD/DeconvNet/: config.json  generator.py  model_2_ncs_graph.py  models.py  ncs_infer.py  train.py
TSD/keras-yolo3/: .gitignore  Makefile  TRTengine.py  callbacks.py  common_sync.sh  compile_trt.sh  evaluate.py  execute_jtsn.sh  gen_anchors.py  generator.py  infer.py  (+17 more)
TSD_DeconvNet/: data.py  generator.py  models.py  train.py
TSR/: README.md  config.json  data.py  evaluate.py  generate_database.sh  generator.py  infer.py  inference.py  model_2_nc_graph.py  model_2_ncs_graph.py  models.py  ncs.py  ncs_infer.py  readTrafficSigns.py  train.py
_common/: backend.py  bbox.py  callbacks.py  image.py  image_proc.py  mobilenet_utils.py  ncs.py  utils.py  voc.py
_scripts/: collect_files_ROMA.sh  parse.py
bbox/: data.py  execute.py  keras_deconv_data.tar.xz.REMOVED.git-id  last_weights_best.h5.REMOVED.git-id  make_archive.sh  net.py  start_train.sh  train.py  weights_best.h5.REMOVED.git-id
classification/: data.py  execute.py  make_archive.sh  net.py  start_train.sh  train.py  unpack_archive.sh  upload_files.sh  weights_best.h5.REMOVED.git-id
common/: confusion_matrix.py
common_scripts/: download_weights.sh  start_train.sh  upload_files.sh  upload_weights.sh
conv_neural_tests/: .gitignore  README.md  create_lmdb.py  fixes.txt  net.prototxt  plot_learning_curve.py  solver.prototxt  start.sh  thanks.txt
conv_traffic_sign_mask/: data.py  execute.py  net.py  start_train.sh  train.py  weights_best.h5
deconv/: check_data.py  data.py  execute.py  make_archive.sh  net.py  train.py  weights.h5.REMOVED.git-id  weights_best.h5.REMOVED.git-id
deconv_lane/: data.py  download_weights.sh  execute.py  last_weights_best.h5  net.py  train.py
deconv_line/: data.py  execute.py  last_weights_best.h5  last_weights_best.h5.REMOVED.git-id  net.py  train.py  upload_weights.sh  weights_best.h5.REMOVED.git-id
docker-openvino/: Dockerfile  build.sh  get_samples.sh  optimize_graph.sh  run_ncs.sh  run_ncs_ws.sh
full_traffic_sign_test/: result.txt  test.py
labeled_traffic_sign/: data.py  net.py  train.py  weights_best.h5.REMOVED.git-id
mad_autonet/: CMakeLists.txt  build.sh  get_models_v1.sh  package.xml  start_CPU.sh
ml_plays/: LICENSE  README.md  requirements.txt
opencv-gstreamer/: CMakeLists.txt
opencv-gstreamer/cmake/: FindGStreamer.cmake
opencv-gstreamer/include/: gst_stream.hpp
opencv-gstreamer/src/: gst_stream.cpp  main.cpp
openvino/: optimize_graph.sh  requirements.txt  start_openvino.sh
openvino-app/: 00382.ppm  CMakeLists.txt  build.sh  main.cpp  start.sh  start_CPU.sh  start_myriad.sh  yolo.cpp  yolo.hpp
openvino-app/include/: yolo.hpp  yolo_ov.hpp
openvino-app/src/: main.cpp  yolo.cpp  yolo_ov.cpp
openvino-trt-app/: CMakeLists.txt  build.sh  build_jtx.sh  install-deps.sh  ov_reqs.txt  start_CPU.sh  start_trt.sh  trt_env.sh
openvino-trt-app/cmake/: FindTensorRT.cmake
openvino-trt-app/include/: yolo.hpp  yolo_ov.hpp  yolo_trt.hpp
openvino-trt-app/src/: main_ov.cpp  main_trt.cpp  yolo.cpp  yolo_ov.cpp  yolo_trt.cpp
openvino_autonet/: CMakeLists.txt  get_models_v1.sh  start_CPU.sh
openvino_autonet/models/: MbN2_416x416_t1.json  MbN2_416x416_t1_FP16.mapping
openvino_autonet/src/: main.cpp  yolo_ov.cpp
sandbox/: .gitignore  README.md  feature_extraction.ipynb
tensorrt-app/: CMakeLists.txt  yolo.hpp
(+164 files in other folders)
